--- a/iOS/AgoraEntScenarios/zh-Hans.lproj/InfoPlist.strings
+++ b/iOS/AgoraEntScenarios/zh-Hans.lproj/InfoPlist.strings
@@ -6,5 +6,5 @@
   
 */
 
-CFBundleDisplayName = "声动互娱";
-NSMicrophoneUsageDescription = "当您进行音频实时互动时，声动互娱想要申请麦克风能访问";
+CFBundleDisplayName = "声动互娱-小玩法";
+NSMicrophoneUsageDescription = "当您进行音频实时互动时，声动互娱-小玩法想要申请麦克风能访问";
