--- a/Android/scenes/aichat/src/main/res/values/strings.xml
+++ b/Android/scenes/aichat/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="aichat_create_submit_toast">请填写智能体名称、简介和描述</string>
     <string name="aichat_create_preview">查看全屏形象</string>
     <string name="aichat_change_one">换一个</string>
+    <string name="aichat_create_agent_limit">你已创建%1d个智能体</string>
 
     <string name="aichat_create_group">创建群聊</string>
     <string name="aichat_group_chat_name">群聊名称</string>
