[Fix][AI-Chat]update ui

--- a/Android/scenes/aichat/src/main/res/values/strings.xml
+++ b/Android/scenes/aichat/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="aichat_attorney_greeting">说说看，又遇到什么棘手问题需要我处理了？</string>
     <string name="aichat_practitioner_greeting">工作再忙也要劳逸结合，找我什么事？</string>
     <string name="aichat_common_greeting">你好呀</string>
+    <string name="aichat_input_content">请输入聊天内容</string>
 
     <!--  群管理  -->
     <string name="aichat_group_manager">群管理</string>
