Dev/all 5.0.1 ios (#1107)
* fix: room service edge case fixed

* Update KeyCenter.swift

* fix: update host

* fix: update localize string

* refactor: remove unused code

* fix: update host & optimize log

* fix: update host

* feat: upgrade AgoraSyncManager

* fix: update app version

* fix: update localized string

* fix: update localize string

* rename joy scene title, replace invalid document url (#1127)

Co-authored-by: qinhui <>

* Dev/fix 5.0.1 ios (#1139)

* rename joy scene title, replace invalid document url

* joy scene: modify title and description

---------

Co-authored-by: qinhui <>

---------

Co-authored-by: Smaug <515092329@qq.com>

--- a/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
@@ -170,7 +170,7 @@
 "home_category_title_ktv" = "在线K歌房";
 "home_category_title_voiceChat" = "语聊房";
 "home_category_title_live" = "直播";
-"home_category_title_joy" = "弹幕玩法";
+"home_category_title_joy" = "互动玩法";
 "home_content_item_ktv_title_solo" = "独唱&合唱";
 "home_content_item_ktv_desc_solo" = "超低延迟真合唱";
 "home_content_item_ktv_title_snatchsinging" = "抢唱";
@@ -191,8 +191,7 @@
 "home_content_item_live_title_show_1v1_private" = "秀场转1v1私密房";
 "home_content_item_live_desc_show_1v1_private" = "秒转场&秒接通";
 "home_content_item_live_title_joy" = "弹幕玩法";
-"home_content_item_live_desc_joy" = "直播互动新玩法";
-
+"home_content_item_live_desc_joy" = "发弹幕 畅快玩";
 "feedback_tags_flashback" = "闪退";
 "feedback_tags_audioStuck" = "音频卡顿";
 "feedback_tags_videoStuck" = "视频卡顿";
