--- a/Android/scenes/aichat/src/main/res/values/strings.xml
+++ b/Android/scenes/aichat/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="aichat_chat_group_select_atleast_desc">请至少选择一个智能体</string>
 
     <!-- 与智能体聊天  -->
-    <string name="aichat_lets_chat">Let\'s Chat</string>
+    <string name="aichat_lets_chat">说点什么</string>
     <string name="aichat_chat_unknown_type">不支持的消息类型</string>
     <string name="aichat_click_to_recognition">开始识别</string>
     <string name="aichat_recognizing">正在识别</string>
