--- a/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
@@ -193,7 +193,7 @@
 "home_content_item_live_desc_show_1v1_private" = "秒转场&秒接通";
 "home_content_item_live_title_joy" = "弹幕玩法";
 "home_content_item_live_desc_joy" = "直播互动新玩法";
-"home_category_title_aigc" = "AI陪聊";
+"home_category_title_aigc" = "AI语聊";
 "home_content_item_aigc_desc" = "时刻陪伴，畅所欲聊";
 
 "feedback_tags_flashback" = "闪退";
