--- a/Android/scenes/aichat/src/main/res/values/strings.xml
+++ b/Android/scenes/aichat/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="aichat_delete_conversation_tips">此操作不可恢复</string>
     <string name="aichat_empty_description">我很神秘～</string>
     <string name="aichat_message_unread_count_max">99+</string>
+    <string name="aichat_chat">聊天</string>
 
     <!--    创建智能体-->
     <string name="aichat_create_count">创建个数</string>
