fix: update aichat display

--- a/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
@@ -81,6 +81,7 @@
 "app_about_live_to_1v1"="秀场转1v1私密房";
 "app_about_ai_photographer"="AI摄影师";
 "app_about_joy"="小玩法";
+"app_about_ai_chat"="AI陪聊";
 "app_about_customer_service"="联系客服";
 "app_about_official_website"="官网地址";
 "app_about_phone_cancel"="取消";
