--- a/Android/scenes/ktv_singbattle/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="ktv_singbattle_room_player_play">播放</string>
     <string name="ktv_singbattle_room_player_tweak">调音</string>
     <string name="ktv_singbattle_room_choose_song">点歌</string>
+    <string name="ktv_singbattle_room_choose_song_loading">加载中</string>
     <string name="ktv_singbattle_room_chosen_song_list">已点</string>
     <string name="ktv_singbattle_room_sing2">演唱中</string>
     <string name="ktv_singbattle_room_no_sing">当前无人演唱\n点击“点歌”一展歌喉</string>
@@ -147,7 +148,7 @@
     <string name="ktv_singbattle_game_start">嗨唱开始</string>
     <string name="ktv_singbattle_game_nobody_grasp">本轮无人演唱 \n 即将播放下一首</string>
     <string name="ktv_singbattle_too_fast">操作太频繁</string>
-    <string name="ktv_singbattle_at_least_four">至少需要4首歌才能开始游戏</string>
+    <string name="ktv_singbattle_at_least_four">至少需要2首歌才能开始游戏</string>
     <string name="ktv_singbattle_song_is_enough">歌曲已满， 开始游戏吧</string>
     <string name="ktv_singbattle_gaming_seat_tip1">正在游戏中，游戏结束后方可踢人下麦</string>
     <string name="ktv_singbattle_gaming_seat_tip2">正在游戏中，游戏结束后方可下麦</string>
@@ -161,4 +162,15 @@
     <string name="ktv_singbattle_debug_settings_audio_dump">音频Dump</string>
     <string name="ktv_singbattle_try">已尝试三次，请手动切歌</string>
     <string name="ktv_singbattle_next">下一首</string>
+
+    <string name="ktv_singbattle_create_room_failed">创建房间失败，错误：%1s</string>
+    <string name="ktv_singbattle_join_room_failed">加入房间失败，错误：%1s</string>
+    <string name="ktv_singbattle_enter_seat_failed">上麦失败，错误：%1s</string>
+    <string name="ktv_singbattle_leave_seat_failed">下麦失败，错误：%1s</string>
+    <string name="ktv_singbattle_kick_seat_failed">踢人下麦失败，错误：%1s</string>
+    <string name="ktv_singbattle_get_songs_failed">拉取歌单失败，错误：%1s</string>
+    <string name="ktv_singbattle_choose_song_failed">点歌失败，错误：%1s</string>
+    <string name="ktv_singbattle_remove_song_failed">删除歌曲失败，错误：%1s</string>
+    <string name="ktv_singbattle_pin_song_failed">置顶歌曲失败，错误：%1s</string>
+    <string name="ktv_singbattle_change_song_failed">切歌失败，错误：%1s</string>
 </resources>
