[Android][6.0.0] UI Adjustment

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -121,7 +121,7 @@
     <string name="app_find_integrated_document">集成文档</string>
     <string name="app_find_ktv">在线K歌房</string>
     <string name="app_find_ktv_tips">一站式接入海量正版曲库，灵活接入各类娱乐社交场景</string>
-    <string name="app_find_chatroom">语聊房</string>
+    <string name="app_find_chatroom">语聊房</string>weixin
     <string name="app_find_chatroom_tips">更纯净、更动听、更沉浸、更好玩的语聊互动体验</string>
     <string name="app_find_live">直播</string>
     <string name="app_find_live_tips">视频『高清』升级，人更美、物更真，体验更流畅</string>
