--- a/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
@@ -235,3 +235,26 @@
 "discover_document_title" = "集成文档";
 "discover_virtual_sound_card_title" = "虚拟声卡2.0";
 "discover_virtual_sound_card_desc" = "0 成本一键美音，无忧社交，大胆开嗓";
+"warm_alert_content1" = "1、为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。";
+"warm_alert_content2" = "2、本产品仅用于功能体验，请勿商用。";
+"warm_alert_content3" = "3、单次使用时长不超过5分钟";
+"warm_alert_title" = "温馨提示";
+"warm_alert_ensure_button" = "知道了";
+"safe_warning_alert_title" = "安全提示";
+"safe_warning_alert_foot_des" = "感谢您的理解与支持，祝您使用愉快！";
+"safe_warning_alert_intro_des" = "声动互娱APP为您提供音视频及通信云服务的演示与体验，请注意：";
+"safe_warning_alert_content1" = "1、本APP用途仅适用于演示和体验，请勿用于日常沟通或商业交易。";
+"safe_warning_alert_content2" = "2、请勿向陌生人透漏您的个人信息、账号密码等敏感信息，以保护您的隐私安全。";
+"safe_warning_alert_content3" = "3、请务必警惕汇款、中奖等涉及钱款的信息，避免上当受骗。";
+"safe_warning_alert_content4" = "4、如遇到可疑情况，请及时向我们反馈，我们将尽快为您核实处理。";
+"realname_alert_title" = "实名认证";
+"realname_alert_des" = "提示：根据相关法律规定，开通直播声网需要收集您的实名身份信息（包括姓名、身份证号），以上身份信息仅用于实名认证。如您不提供实名身份信息，我们将无法为您提供直播服务。具体可以参考下方相关个人信息的隐私政策。";
+"realname_name_textfield" = "请输入姓名";
+"realname_card_textfield" = "请输入身份证号";
+"realname_hight_light_text1" = "已阅读并同意";
+"realname_hight_light_text2" = "《隐私政策》";
+"realname_hight_light_text3" = "和";
+"realname_hight_light_text4" = "《用户协议》";
+"realname_alert_enter_title" = "认证";
+"realname_alert_cancel_title" = "取消"; 
+"realname_toast_des" = "请查看并勾选协议内容";
