--- a/Android/common/ui-widget/src/main/res/values/strings.xml
+++ b/Android/common/ui-widget/src/main/res/values/strings.xml
@@ -76,6 +76,9 @@
     <string name="comm_security_notice_content3">感谢您的理解与支持，祝您使用愉快！</string>
 
     <string name="comm_kind_reminder">限时使用提示</string>
-    <string name="comm_kind_reminder_content">为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容，本产品仅用于功能和性能测试，请勿商用。单次使用时长不超过%d分钟。</string>
+    <string name="comm_kind_reminder_content">
+        1. 为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。\n
+        2. 本产品仅用于功能和性能测试，请勿商用。\n
+        3. 单次使用时长不超过%d分钟。</string>
 
 </resources>
