--- a/iOS/AgoraEntScenarios/Scenes/SBG/sbgResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/SBG/sbgResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -3,7 +3,7 @@
 "sbg_loading" = "加载中…";
 "sbg_create_room" = "创建房间";
 "sbg_room_title" = "房间名称";
-"sbg_create_tips" = "本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过20分钟，过时房问将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110";
+"sbg_create_tips" = "本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过20分钟，过时房间将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110";
 "sbg_random" = "随机";
 "sbg_room_is_encryption" = "房间加密";
 "sbg_room_placeHolder" = "填写房间名称,吸引更多观众";
