--- a/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/zh-Hans.lproj/Localizable.strings
@@ -237,7 +237,7 @@
 "discover_virtual_sound_card_desc" = "0 成本一键美音，无忧社交，大胆开嗓";
 "warm_alert_content1" = "1、为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。";
 "warm_alert_content2" = "2、本产品仅用于功能体验，请勿商用。";
-"warm_alert_content3" = "3、单次使用时长不超过5分钟";
+"warm_alert_content3" = "3、单次使用时长不超过%d分钟";
 "warm_alert_title" = "温馨提示";
 "warm_alert_ensure_button" = "知道了";
 "safe_warning_alert_title" = "安全提示";
