--- a/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
@@ -236,6 +236,9 @@
 "discover_virtual_sound_card_title" = "虚拟声卡2.0";
 "discover_virtual_sound_card_desc" = "0 成本一键美音，无忧社交，大胆开嗓";
 "warm_alert_content" = "为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容，本产品仅用于功能和性能测试，请勿商用。单次使用时长不超过 20 分钟。";
+"warm_alert_content1" = "1、为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。";
+"warm_alert_content2" = "2、本产品仅用于功能体验，请勿商用。";
+"warm_alert_content3" = "3、单次使用时长不超过%d分钟";
 "warm_alert_title" = "温馨提示";
 "warm_alert_ensure_button" = "知道了";
 "safe_warning_alert_title" = "安全提示";
@@ -254,5 +257,5 @@
 "realname_hight_light_text3" = "和";
 "realname_hight_light_text4" = "《用户协议》";
 "realname_alert_enter_title" = "认证";
-"realname_alert_cancel_title" = "取消"; 
+"realname_alert_cancel_title" = "取消";
 "realname_toast_des" = "请查看并勾选协议内容";
