--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="show_live_prepare_rotate">翻转</string>
     <string name="show_live_prepare_beauty">美化</string>
     <string name="show_live_prepare_hd">画质</string>
-    <string name="show_live_prepare_tip">本产品仅用于功能体验，单次直播时长不超过20mins</string>
+    <string name="show_live_prepare_tip">本产品仅用于功能体验，单次直播时长不超过%1d分钟</string>
     <string name="show_live_prepare_start_live">开始直播</string>
     <string name="show_live_prepare_room_empty">房间名不能为空！</string>
     <string name="show_live_prepare_room_clipboard_copyed">房间ID已复制到剪切板！</string>
