--- a/Android/scenes/cantata/src/main/res/values/strings.xml
+++ b/Android/scenes/cantata/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="cantata_please_input_4_pwd">请设置4位数房间密码</string>
     <string name="cantata_enter_room_tips">网络不佳, 请重试</string>
     <string name="cantata_room_pwd">房间加密</string>
-    <string name="cantata_create_room_tips">本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过20分钟，过时房间将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110</string>
+    <string name="cantata_create_room_tips">本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过%1d分钟，过时房间将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110</string>
     <string name="cantata_net_status_good">本机网络好</string>
     <string name="cantata_net_status_m">本机网络良</string>
     <string name="cantata_net_status_low">本机网络差</string>
@@ -28,8 +28,6 @@
     <string name="cantata_more_actions">更多操作</string>
     <string name="cantata_create">创建</string>
     <string name="cantata_create_tips1">欢迎来到大合唱房，\n美声音效、歌词同步、打分等九大场景轻松还\n原线下K歌体验，超高音质，以歌会友，一起\n来体验吧！</string>
-    <string name="cantata_create_tips2">本应用为测试产品，请勿商用</string>
-    <string name="cantata_create_tips3">单次K歌最长20分钟，每个房间最多8人</string>
     <string name="cantata_room_before_speaker">点击空麦位，上麦后可点歌与发言</string>
     <string name="cantata_room_owner">房主</string>
     <string name="cantata_room_sing1">演唱中</string>
@@ -139,7 +137,6 @@
     <string name="cantata_room_list_title">歌房</string>
     <string name="cantata_room_list_empty">请创建一个歌房</string>
     <string name="cantata_create_room_name_label">歌房名称</string>
-    <string name="cantata_create_room_name_label2">本应用为测试产品，请勿商用。单次直播最长10分钟，每个频道最多10人。</string>
     <string name="cantata_create_button">创建</string>
     <string name="cantata_dialog_join_msg">准备中，请等待…</string>
     <string name="cantata_permission_alert">缺少运行所需的必要权限，是否确认申请？</string>
