--- a/Android/scenes/play_zone/src/main/res/values/strings.xml
+++ b/Android/scenes/play_zone/src/main/res/values/strings.xml
@@ -16,7 +16,6 @@
     <string name="play_zone_classic_board_games">经典棋牌</string>
     <string name="play_zone_party_games">Party Game</string>
     <string name="play_zone_empty_room">欢迎来到声网休闲玩法方案\n目前暂无房间</string>
-    <string name="play_zone_live_prepare_tip">本产品仅用于功能体验，单次直播时长不超过10mins</string>
     <string name="play_zone_room_id">ID: %s</string>
     <string name="play_zone_user_count">%d人</string>
     <string name="play_zone_create_room">创建房间</string>
@@ -25,7 +24,7 @@
     <string name="play_zone_room_name_hint">填写房间名称，吸引更多观众</string>
     <string name="play_zone_please_input_4_pwd">请设置4位数房间密码</string>
     <string name="play_zone_room_pwd">房间加密</string>
-    <string name="play_zone_create_room_tips">本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过10分钟，过时房间将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110</string>
+    <string name="play_zone_create_room_tips">本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过%1d分钟，过时房间将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110</string>
     <string name="play_zone_please_input_room_name">请输入房间名称</string>
     <string name="play_zone_get_game_list_error">获取游戏列表失败</string>
     <string name="play_zone_game_rules">游戏规则</string>
@@ -37,7 +36,7 @@
     <string name="play_zone_living_host_end_content">是否退出游戏？</string>
     <string name="play_zone_living_user_end_content">是否退出游戏？</string>
     <string name="play_zone_living_timeout_title">游戏超时自动退出</string>
-    <string name="play_zone_living_host_timeout">您已体验超过10分钟，当前房间已过期，请退出重新创建房间</string>
+    <string name="play_zone_living_host_timeout">您已体验超过%1d分钟，当前房间已过期，请退出重新创建房间</string>
     <string name="play_zone_living_user_timeout">当前房间已过期，请退出</string>
     <string name="play_zone_living_destroy_title">游戏结束</string>
     <string name="play_zone_living_destroy_content">房主已解散房间，请确认离开房间</string>
