--- a/Android/scenes/voice/src/main/res/values/strings.xml
+++ b/Android/scenes/voice/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="voice_room_name_hint">填写房间名称，吸引更多观众</string>
     <string name="voice_please_input_4_pwd">请设置4位数房间密码</string>
     <string name="voice_room_pwd">房间加密</string>
-    <string name="voice_create_room_tips">本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过20分钟，过时房间将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110</string>
+    <string name="voice_create_room_tips">本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过%1d分钟，过时房间将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110</string>
     <string name="voice_please_input_room_name">请输入房间名称</string>
     <string name="voice_room_create_go_live">开始直播</string>
     <string name="voice_room_create_chat_room">语聊房</string>
@@ -62,8 +62,6 @@
     <string name="voice_gift_sent">赠送 </string>
     <string name="voice_chatroom_gift_notice"> %1$s 送给 %2$s 一发火箭</string>
     <string name="voice_chatroom_send_gift_fail">礼物发送失败</string>
-    <string name="voice_chatroom_create_tip1">本应用为测试产品，请勿商用</string>
-    <string name="voice_chatroom_create_tip2">单次语聊房最长20分钟，过时房间将自动解散</string>
     <string name="voice_chatroom_profile_change_picture">更换头像</string>
     <string name="voice_room_agree_success">同意上麦成功!</string>
     <string name="voice_room_agree_fail">同意上麦失败!</string>
